--- a/iframe.html
+++ b/iframe.html
@@ -43,7 +43,7 @@
     <script>
       window.CONFIG_TYPE = 'PRODUCTION';
       window.LOGLEVEL = 'info';
-      window.FRAMEWORK_OPTIONS = {};
+      window.FRAMEWORK_OPTIONS = {"docgen":"vue-component-meta"};
       window.CHANNEL_OPTIONS = {};
       window.FEATURES = {"argTypeTargetsV7":true,"legacyDecoratorFileOrder":false,"disallowImplicitActionsInRenderV8":true};
       window.STORIES = [{"titlePrefix":"","directory":"./src","files":"**/*.mdx","importPathMatcher":"^\\.[\\\\/](?:src(?:\\/(?!\\.)(?:(?:(?!(?:^|\\/)\\.).)*?)\\/|\\/|$)(?!\\.)(?=.)[^/]*?\\.mdx)$"},{"titlePrefix":"","directory":"./src","files":"**/*.stories.@(js|jsx|mjs|ts|tsx)","importPathMatcher":"^\\.[\\\\/](?:src(?:\\/(?!\\.)(?:(?:(?!(?:^|\\/)\\.).)*?)\\/|\\/|$)(?!\\.)(?=.)[^/]*?\\.stories\\.(js|jsx|mjs|ts|tsx))$"}];
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D-DyB9Wj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CPNrwr26.js"></script>
   </head>
 
   <body>
