--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CPNrwr26.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-si-sZw9D.js"></script>
   </head>
 
   <body>
