deploy: 97e4daab7f987e217741c4a1a616a8506cb60c6d

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-si-sZw9D.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bq0OUBjA.js"></script>
   </head>
 
   <body>
