deploy: 42a7602a2c293fb84fb13997e54a7f6cf2632dc1

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-nuGLNQck.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CD7m_o-G.js"></script>
   </head>
 
   <body>
