deploy: 0102d2ec3a68b47d6d526162a6256ec68f67a468

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CD7m_o-G.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-G5lfIZzg.js"></script>
   </head>
 
   <body>
