deploy: b4802b271fb8bddc82a08363115d709fd1c13d5c

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-lv0zdgbi.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BIVRiYL8.js"></script>
   </head>
 
   <body>
