deploy: 97edd9e22ca82ee47e11120d89e98175af8acd1a

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BIVRiYL8.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C5WaAubw.js"></script>
   </head>
 
   <body>
