--- a/dev/iframe.html
+++ b/dev/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bc9oi0rI.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BwU6cZWv.js"></script>
   </head>
 
   <body>
