deploy: ee3906d759b9651a9b5e9b4787eadf53e10870b3

--- a/dev/iframe.html
+++ b/dev/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BwU6cZWv.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Ct_bqHQT.js"></script>
   </head>
 
   <body>
